<resources>
    <string name="app_name">WiseScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_hour">%d h</string>
    <string name="text_minute">%d m</string>
    <string name="accessibility_service_description">To continue use WiseScreen, enable the WiseScreen accessibility service by tapping the toggle switch in the upper right corner</string>
    <string name="cd_Next">Next</string>
    <string name="text_Repeat_days">Repeat (%1$s)</string>
    <string name="text_Work_Days">Work Days</string>
    <string name="text_Rest_Days">Rest Days</string>
    <string name="text_Cancel">Cancel</string>
    <string name="text_OK">OK</string>
    <string name="text_Daily_screen_time_days">Daily screen time (%1$s)</string>
    <string name="text_Repeat">Repeat</string>
    <string name="text_Daily_screen_time">Daily screen time</string>
    <string name="text_Every_Day">Every Day</string>
    <string name="text_Screen_Time">Screen Time</string>
    <string name="cd_Legend_Indicator">Legend Indicator</string>
    <string name="text_APP_USAGE">APP USAGE</string>
    <string name="Six_days_ago">Six days ago</string>
    <string name="text_number_0" translatable="false">0</string>
    <string name="text_number_24" translatable="false">24</string>
    <string name="text_Today">Today</string>
    <string name="text_Last_7_days">Last 7 days</string>
    <string name="text_screen_used_notification">%1$s of screen time used</string>
    <string name="text_Never_allowed">Never allowed</string>
    <string name="text_Always_allowed">Always allowed</string>
    <string name="text_Default">Default</string>
    <string name="text_restricted_app">%1$s has been restricted</string>
    <string name="text_app_limited">You have reached the limit for %1$s</string>
    <string name="text_Others">Others</string>
    <string name="text_pin_hint" translatable="false">••••••</string>
    <string name="text_Enter_PIN">Enter PIN</string>
    <string name="text_Incorrect_PIN">Incorrect PIN</string>
    <string name="text_PIN_Mismatch">"Pin don't match"</string>
    <string name="text_Confirm_PIN">Confirm PIN</string>
    <string name="text_Create_New_PIN">Create New PIN</string>
    <string name="text_Usage_Statistics">To continue. give access to Usage Statistics</string>
    <string name="text_Accessibility_Service">To continue. Activate WiseScreen Accessibility Service</string>
    <string name="text_Activate">Activate</string>
    <string name="text_Grant_Access">Grant Access</string>
    <string name="text_App_limits">App limits</string>
    <string name="text_Screen_time_management">Screen time management</string>
    <string name="text_More">More</string>
    <string name="text_App_limits_description">Set your daily screen time</string>
    <string name="text_Screen_time_menu_description">Set usage Limits for your apps</string>
    <string name="text_title_permission_dialog">Permission.. Please!</string>
    <string name="text_Exit">Exit</string>
    <string name="cd_permission">Permission Required</string>
    <string name="text_Grant_Usage_Access">Grant usage access permission</string>
    <string name="text_Activate_Service">Activate WiseScreen service</string>
    <string name="text_description_permission_dialog">To continue. You need to grant permission for WiseScreen to access your usage data and activate WiseScreen service</string>
    <string name="text_wise_screen_pin">WiseScreen PIN</string>
    <string name="text_Limit_use">Limit use</string>
    <string name="text_Search">Search</string>
    <string name="text_Notification">Notification</string>
</resources>