<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_title_permission_dialog"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space__3x"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/space__3x"
        android:text="@string/text_description_permission_dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_illustration" />

    <Button
        android:id="@+id/btn_exit"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space__2x"
        android:layout_marginEnd="@dimen/space__2x"
        android:layout_marginBottom="8dp"
        android:text="@string/text_Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_illustration"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/space__2x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/cd_permission"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:srcCompat="@drawable/il_permission" />

    <Switch
        android:id="@+id/switch_usage_access"
        android:layout_marginTop="@dimen/space__2x"
        android:layout_marginStart="@dimen/space__2x"
        android:layout_marginEnd="@dimen/space__2x"
        android:paddingTop="@dimen/space__1x"
        android:paddingBottom="@dimen/space__1x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_Grant_Usage_Access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <Switch
        android:id="@+id/switch_accessibility_service"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/space__2x"
        android:layout_marginEnd="@dimen/space__2x"
        android:paddingTop="@dimen/space__1x"
        android:paddingBottom="@dimen/space__1x"
        android:layout_height="wrap_content"
        android:text="@string/text_Activate_Service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_usage_access" />

</androidx.constraintlayout.widget.ConstraintLayout>